# OmniFold

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.sh
docs/: fasta.md
omnifold/: af3_models.py  cli.py  config_generator.py  msa_manager.py  orchestrator.py  runner.py
omnifold/chai1_modifications/: chai1.py  context.py  m8.py
omnifold/html_report/: generate_report.py  ipsae.py  template.html
omnifold/html_report/pae-viewer/: EXPORTING.md  README.md  index.html  requirements.txt
omnifold/html_report/pae-viewer/examples/PdhA-PdhB-PdhI/: crosslinks.csv
omnifold/html_report/pae-viewer/examples/SufD-SufC-SufB/: crosslinks.csv
omnifold/singularity_af3/alphafold3/: run_alphafold.py
omnifold/util/: af3_to_boltz_csv.py  colabfold.py  definitions.py  file_converters.py  generate_colabfold_msas.py  generate_final_af3_config.py  msa_utils.py  template_aligner.py  template_export.py
protein_ensemble_pred/: af3_models.py  cli.py  config_generator.py  input_handler.py  msa_manager.py  orchestrator.py  runner.py
protein_ensemble_pred/chai1_modifications/: rank.py
protein_ensemble_pred/html_report/: generate_report.py  ipsae.py  template.html
protein_ensemble_pred/html_report/pae-viewer/: package-lock.json  package.json
protein_ensemble_pred/singularity_af3/alphafold3/: run_alphafold.py
protein_ensemble_pred/util/: af3_to_boltz_csv.py  colabfold.py  definitions.py  file_converters.py  generate_colabfold_msas.py  gpu_utils.py  msa_utils.py
tests/: test_input_handler.py
tests/files/: alphafold3_input.json  multi_chain_1.fasta  multi_chain_1_af3.json  multi_chain_1_boltz.yaml  multi_chain_2.fasta  multi_chain_2_af3.json  multi_chain_2_boltz.yaml  multi_chain_3.fasta  multi_chain_3_af3.json  multi_chain_3_boltz.yaml  multi_chain_4.fasta  multi_chain_5.fasta  multi_chain_ligand_1_boltz.yaml  multi_chain_ligand_2_boltz.yaml  multi_chain_ligand_af3.json  multi_ligand_af3.json  multi_ligand_boltz.yaml  single_chain_1.fasta  single_chain_1_af3.json  single_chain_1_boltz.yaml  single_chain_2.fasta  single_chain_2_af3.json  single_chain_2_boltz.yaml  single_chain_3.fasta  single_chain_3_af3.json  single_chain_3_boltz.yaml  single_chain_4.fasta  single_chain_5.fasta  single_chain_ligand_af3.json  single_chain_ligand_boltz.yaml  single_chain_smileslig_af3.json
(+34 files in other folders)
