[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "protein-ensemble-pred"
version = "0.1.0"
description = "HPC Protein Ensemble Prediction CLI. Runs AlphaFold3 and Boltz-1."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT License"}

dependencies = [
    "pyfastx",
    "PyYAML",
    "pydantic"
]

[project.scripts]
protein-ensemble-pred = "protein_ensemble_pred.cli:main"

[project.urls]
Homepage = "https://github.com/EpiGenomicsCode/Protein-Ensemble-Inference" 
Repository = "https://github.com/EpiGenomicsCode/Protein-Ensemble-Inference" 